user more dropdown overflow fix

--- a/client/src/scss/blocks/_data.scss
+++ b/client/src/scss/blocks/_data.scss
@@ -3,8 +3,10 @@
     border-radius: 8px;
     background-color: #ffffff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-
+    
     &__table-wrapper {
+        margin-top: -35px;
+        padding-top: 35px;
         overflow-x: auto;
         overflow-y: hidden;
     }
