--- a/client/src/scss/blocks/_filters.scss
+++ b/client/src/scss/blocks/_filters.scss
@@ -2,7 +2,7 @@
     position: absolute;
     z-index: 100;
     min-width: 200px;
-    padding: 20px 10px 10px 10px;
+    padding: 30px 10px 10px 10px;
     border: 1px solid $gray-light;
     border-radius: 6px;
     background-color: #ffffff;
