--- a/client/src/scss/blocks/_more.scss
+++ b/client/src/scss/blocks/_more.scss
@@ -4,7 +4,7 @@
     left: -10px;
     z-index: 100;
     min-width: 130px;
-    padding: 5px;
+    padding: 5px 20px 5px 5px;
     border-radius: 6px;
     background-color: #ffffff;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
