--- a/client/src/scss/mixins/_dropdown-close-button.scss
+++ b/client/src/scss/mixins/_dropdown-close-button.scss
@@ -1,10 +1,9 @@
 @mixin dropdown-close-button {
     position: absolute;
-    top: -10px;
-    right: -10px;
+    top: 10px;
+    right: 5px;
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #ffffff;
     filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.25));
 }
